fix: fixing deprecation warnings and adding Java 17 simplifications