@@ -6,8 +6,6 @@ import io.snyk.jenkins.tools.Platform;
 import javax.annotation.Nonnull;
 import java.io.IOException;
 import java.net.URL;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 import static java.lang.String.format;
@@ -15,7 +13,7 @@ import static java.lang.String.format;
 public class DownloadService {
   private static final String SNYK_DOWNLOAD_PRIMARY = "https://downloads.snyk.io/%s/%s/%s";
   private static final String SNYK_DOWNLOAD_SECONDARY = "https://static.snyk.io/%s/%s/%s";
-  public static final List<String> SNYK_CLI_DOWNLOAD_URLS = Collections.unmodifiableList(Arrays.asList(SNYK_DOWNLOAD_PRIMARY, SNYK_DOWNLOAD_SECONDARY));
+  public static final List<String> SNYK_CLI_DOWNLOAD_URLS = List.of(SNYK_DOWNLOAD_PRIMARY, SNYK_DOWNLOAD_SECONDARY);
 
   private DownloadService() {
     // squid:S1118
@@ -29,6 +27,6 @@ public class DownloadService {
     } else { // snyk-to-html
       urlNoUtm = new URL(format(urlTemplate, product, version, platform.snykToHtmlWrapperFileName));
     }
-    return new URL(urlNoUtm.toString() + "?utm_source=" + PluginMetadata.getIntegrationName());
+    return new URL(urlNoUtm + "?utm_source=" + PluginMetadata.getIntegrationName());
   }
 }
